feat: more debugging
"Unknown Level String: 'warning', defaulting to NoLevel","logLevel":"warning","time":"2024-08-26T11:13:11Z","message":"Unspecified or invalid log level, setting the level to default (ERROR)..."

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -3,7 +3,7 @@ global:
   sendAnonymousUsage: false
 
 log:
-  level: WARNING  # Logging level: DEBUG, INFO, WARNING, ERROR (Default), CRITICAL
+  level: INFO  # Logging level: DEBUG, INFO, WARNING, ERROR (Default), CRITICAL
 
 # Optional: Accesslog configuration
 accesslog:
