--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - "traefik.http.routers.hello-world.entrypoints=websecure"
       - "traefik.http.routers.hello-world.tls=true"
       - "traefik.http.routers.hello-world.tls.certresolver=letsencrypt"
+    networks:
+      - traefik
 
 networks:
   traefik:
