✨ (docker-compose.yml): add default command to minio service to ensure it starts in server mode

--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: minio/minio:latest
     container_name: minio
     restart: unless-stopped
+    command: server
     ports:
       - "9001:9001"
     volumes:
