--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 'minio-appdata:/root/.minio'
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minio}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minio}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minio123}
       - MINIO_VOLUMES="/data"
     networks:
       - traefik
