--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: minio/minio:latest
     container_name: minio
     restart: unless-stopped
-    command: server
+    command: server --address :9000 --console-address :9001
     ports:
-      - "9001:9001"
+      - "9000:9000"
     volumes:
       - 'minio-data:/data'
       - 'minio-appdata:/root/.minio'
@@ -21,7 +21,7 @@ services:
       - 'traefik.http.routers.minio.entrypoints=websecure'
       - 'traefik.http.routers.minio.tls=true'
       - 'traefik.http.routers.minio.tls.certresolver=letsencrypt'
-      - 'traefik.http.services.minio.loadbalancer.server.port=9000'
+      - 'traefik.http.services.minio.loadbalancer.server.port=9001'
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 30s
