fix(docker-compose.yml): correct IP2LOCATION_TOKEN environment variable syntax

--- a/flomepage/docker-compose.yml
+++ b/flomepage/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: unless-stopped
     container_name: flomepage
     environment:
-      - IP2LOCATION_TOKEN: ${IP2LOCATION_TOKEN}
+      IP2LOCATION_TOKEN: ${IP2LOCATION_TOKEN}
     volumes:
       - flomepage-appdata:/app/persistent
       - flomepage-ip2location:/app/IP2LOCATION
