feat(docker-compose): add traefik network configuration and ensure file ends with a newline

--- a/ozeliurs-com/docker-compose.yml
+++ b/ozeliurs-com/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       - "traefik.http.routers.beta-ozeliurs.tls.certresolver=letsencrypt"
     healthcheck:
       test: [ "CMD", "wget", "-q", "--spider", "http://localhost:5000" ]
+
+networks:
+  traefik:
+    external: true
