--- a/gatus/config.tpl.yaml
+++ b/gatus/config.tpl.yaml
@@ -18,3 +18,87 @@ endpoints:
       - type: discord
         description: "Hello <@325623032456413186>, the website ozeliurs.com is down!"
         send-on-resolved: true
+
+  - name: hedgedoc
+    group: ozeliurs
+    url: "https://hedgedoc.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website hedgedoc.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: bookstack
+    group: ozeliurs
+    url: "https://bookstack.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website bookstack.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: forgejo
+    group: ozeliurs
+    url: "https://git.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website git.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: infisical
+    group: ozeliurs
+    url: "https://infisical.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website infisical.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: fusion
+    group: ozeliurs
+    url: "https://fusion.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website fusion.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: vaultwarden
+    group: ozeliurs
+    url: "https://vaultwarden.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website vaultwarden.ozeliurs.com is down!"
+        send-on-resolved: true
+
+  - name: paperless
+    group: ozeliurs
+    url: "https://paper.ozeliurs.com/"
+    interval: 1m
+    conditions:
+      - "[STATUS] == 200"
+      - "[CERTIFICATE_EXPIRATION] > 48h"
+    alerts:
+      - type: discord
+        description: "Hello <@325623032456413186>, the website paper.ozeliurs.com is down!"
+        send-on-resolved: true
