fix(config.tpl.yaml): remove trailing slash from infisical endpoint URL

--- a/gatus/config.tpl.yaml
+++ b/gatus/config.tpl.yaml
@@ -57,7 +57,7 @@ endpoints:
 
   - name: infisical
     group: ozeliurs
-    url: "https://infisical.ozeliurs.com/"
+    url: "https://infisical.ozeliurs.com"
     interval: 1m
     conditions:
       - "[STATUS] == 200"
