--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -14,3 +14,5 @@ services:
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 587
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: ${EMAIL_USER}
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD: ${EMAIL_PASSWORD}
+      WATCHTOWER_HTTP_API_METRICS: 'true'
+      WATCHTOWER_HTTP_API_TOKEN: ${WATCHTOWER_HTTP_API_TOKEN}
