--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
+    ports:
+      - 8080:8080
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
