fix(dc-linter.yaml): escape newline character in jq command to correctly handle directory paths

--- a/.github/workflows/dc-linter.yaml
+++ b/.github/workflows/dc-linter.yaml
@@ -15,7 +15,7 @@ jobs:
       id: set-matrix
       run: |
         dirs=$(find . -type f -name 'docker-compose.yml' -exec dirname {} \; | grep -v '/\.' | sort -u)
-        echo "::set-output name=directories::$(echo $dirs | jq -R -s -c 'split("\n") | map(select(. != ""))')"
+        echo "::set-output name=directories::$(echo $dirs | jq -R -s -c 'split(\"\\n\") | map(select(. != \"\"))')"
 
   validate:
     needs: find-docker-compose-files
