feat(dc-linter): add debug output of dirs variable in dc-linter workflow

--- a/.github/workflows/dc-linter.yaml
+++ b/.github/workflows/dc-linter.yaml
@@ -17,6 +17,7 @@ jobs:
         dirs=$(find . -mindepth 1 -maxdepth 1 -type d -not -path './.*' -exec basename {} \;)
         dirs=$(echo "$dirs" | jq -R -s -c 'split("\n") | map(select(length > 0))')
         echo "::set-output name=dirs::$dirs"
+        echo "$dirs"
 
   validate:
     needs: find-docker-compose-files
