--- a/.github/workflows/dc-linter.yaml
+++ b/.github/workflows/dc-linter.yaml
@@ -14,21 +14,19 @@ jobs:
       - name: Find Docker Compose files
         id: set-matrix
         run: |
-          dirs=$(find . -mindepth 1 -maxdepth 1 -type d -not -path './.*' -exec basename {} \;)
-          dirs=$(echo "$dirs" | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          echo "::set-output name=dirs::$dirs"
-          echo "$dirs"
+          directories=$(find . -mindepth 1 -maxdepth 1 -type d -not -path './.*' -exec basename {} \;)
+          directories=$(echo "$directories" | jq -R -s -c 'split("\n") | map(select(length > 0))')
+          echo "::set-output name=directories::$directories"
 
   validate:
     needs: find-docker-compose-files
     runs-on: ubuntu-latest
-    #strategy:
-    #  matrix:
-    #   directory: ${{ fromJson(needs.find-docker-compose-files.outputs.dirs) }}
-    steps:
-      - name: Debug
-        run: echo ${{ toJson(needs.find-docker-compose-files.outputs.dirs) }}
 
+    strategy:
+      matrix:
+        directory: ${{ fromJson(needs.find-docker-compose-files.outputs.directories) }}
+
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
