--- a/.github/workflows/dc-linter.yaml
+++ b/.github/workflows/dc-linter.yaml
@@ -30,8 +30,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: debug
-        run: ls -la ${{ matrix.directory }}
-
       - name: Validate Docker Compose
-        run: docker-compose -f "${{ matrix.directory }}/docker-compose.yml" config
+        run: docker compose -f "${{ matrix.directory }}/docker-compose.yml" config
