--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       WATCHTOWER_NOTIFICATIONS: email
       WATCHTOWER_NOTIFICATION_EMAIL_FROM: "docker@ozeliurs.com"
       WATCHTOWER_NOTIFICATION_EMAIL_TO: "ozeliurs@gmail.com"
-      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: in-v3.mailjet.com
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: "in-v3.mailjet.com"
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT: 587
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER: ${EMAIL_USER}
       WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD: ${EMAIL_PASSWORD}
