--- a/vaultwarden/docker-compose.yml
+++ b/vaultwarden/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: vaultwarden
     restart: unless-stopped
     environment:
+      DOMAIN: "vaultwarden.ozeliurs.com"
       SMTP_HOST: "in-v3.mailjet.com"
       SMTP_FROM: "vaultwarden@ozeliurs.com"
       SMTP_PORT: 587
