--- a/cf/docker-compose.yml
+++ b/cf/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3'
 services:
   cf:
-    image: nginx
+    image: caddy:latest
     container_name: cf
     restart: unless-stopped
     volumes:
-      - cf-appdata:/usr/share/nginx/html:ro
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - cf-appdata:/cf:ro
     networks:
       - traefik
     labels:
@@ -14,6 +15,7 @@ services:
       - "traefik.http.routers.cf-ozeliurs-com.entrypoints=websecure"
       - "traefik.http.routers.cf-ozeliurs-com.tls=true"
       - "traefik.http.routers.cf-ozeliurs-com.tls.certresolver=letsencrypt"
+      - "traefik.http.services.cf-ozeliurs-com.loadbalancer.server.port=80"
 
 networks:
   traefik:
