chore(docker-compose.yml): update wakapi image source to ghcr.io/muety/wakapi The wakapi image is now pulled from the GitHub Container Registry (ghcr.io) instead of the previous source, ensuring a more reliable and maintained image.

--- a/wakapi/docker-compose.yml
+++ b/wakapi/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   wakapi:
-    image: wakapi/wakapi
+    image: ghcr.io/muety/wakapi
     restart: unless-stopped
     container_name: wakapi
     environment:
