--- a/gatus/config.tpl.yaml
+++ b/gatus/config.tpl.yaml
@@ -2,6 +2,11 @@ storage:
   type: sqlite
   path: /data/data.db
 
+connectivity:
+  checker:
+    target: 1.1.1.1:53
+    interval: 60s
+
 alerting:
   discord:
     webhook-url: "{{ DISCORD_WEBHOOK_URL }}"
