feat(viseron): add configuration and secrets management The configuration is now externalized using a template file and environment variables, allowing for more flexibility and security. The update script has been enhanced to create required folders and update secrets.

--- a/viseron/docker-compose.yml
+++ b/viseron/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: viseron
     volumes:
       - viseron-data:/recordings
-      - viseron-appdata:/config
+      - ./config.yaml:/config/config.yaml:ro
       - /etc/localtime:/etc/localtime:ro
     networks:
       - traefik
@@ -27,10 +27,4 @@ volumes:
     driver_opts:
       type: none
       device: '/mnt/data/viseron'
-      o: bind
-  viseron-appdata:
-    driver: local
-    driver_opts:
-      type: none
-      device: '/mnt/appdata/viseron'
       o: bind
