chore(envsubst): remove envsubst script and replace with envsubst command The envsubst script has been removed and replaced with the envsubst command to simplify the process of replacing placeholders in YAML files with environment variables. This change improves maintainability and reduces complexity.

--- a/gatus/config.tpl.yaml
+++ b/gatus/config.tpl.yaml
@@ -9,7 +9,7 @@ connectivity:
 
 alerting:
   discord:
-    webhook-url: "{{ DISCORD_WEBHOOK_URL }}"
+    webhook-url: "${DISCORD_WEBHOOK_URL}"
 
 endpoints:
   # ======================= Ozeliurs Services =======================
