--- a/viseron/config.tpl.yaml
+++ b/viseron/config.tpl.yaml
@@ -10,6 +10,11 @@ ffmpeg:
       path: /stream1
       username: ${DATACENTER_USER}
       password: ${DATACENTER_PASSWORD}
+      width: 1920
+      height: 1080
+      fps: 15
+      codec: h264
+      audio_codec: alaw
 
 mog2:
   motion_detector:
