--- a/viseron/config.tpl.yaml
+++ b/viseron/config.tpl.yaml
@@ -14,7 +14,7 @@ ffmpeg:
       height: 1080
       fps: 15
       codec: h264
-      audio_codec: alaw
+      audio_codec: aac
 
 mog2:
   motion_detector:
