--- a/viseron/docker-compose.yml
+++ b/viseron/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "traefik.http.routers.viseron.tls=true"
       - "traefik.http.routers.viseron.tls.certresolver=letsencrypt"
       - "traefik.http.services.viseron.loadbalancer.server.port=8888"
+      - "traefik.http.routers.viseron.middlewares=auth"
+      - "traefik.http.middlewares.auth.basicauth.users=admin:${VISERON_PASSWORD}"
 
 networks:
   traefik:
