--- a/viseron/config.tpl.yaml
+++ b/viseron/config.tpl.yaml
@@ -1,6 +1,3 @@
-logger:
-  default_level: debug
-
 ffmpeg:
   camera:
     datacenter:
@@ -21,7 +18,7 @@ mog2:
     cameras:
       datacenter:
         fps: 1
-
+        trigger_recorder: true
 
 nvr:
   datacenter:
