--- a/infisical/docker-compose.yml
+++ b/infisical/docker-compose.yml
@@ -32,6 +32,13 @@ services:
       ENCRYPTION_KEY: $ENCRYPTION_KEY
       AUTH_SECRET: $AUTH_SECRET
 
+      SMTP_HOST: $SMTP_HOST
+      SMTP_PORT: $SMTP_PORT
+      SMTP_USERNAME: $SMTP_USERNAME
+      SMTP_PASSWORD: $SMTP_PASSWORD
+      SMTP_FROM_ADDRESS: $SMTP_FROM_ADDRESS
+      SMTP_FROM_NAME: $SMTP_FROM_NAME
+
       NODE_ENV: "production"
     networks:
       - traefik
