feat(docker-compose.yml): add CMD_ALLOW_ORIGIN environment variable for hedgedoc Added the CMD_ALLOW_ORIGIN environment variable to allow cross-origin requests from hedgedoc.ozeliurs.com, enhancing security and flexibility in the hedgedoc service.

--- a/hedgedoc/docker-compose.yml
+++ b/hedgedoc/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: hedgedoc
     environment:
       CMD_DOMAIN: "hedgedoc.ozeliurs.com"
+      CMD_ALLOW_ORIGIN: "hedgedoc.ozeliurs.com"
       CMD_PROTOCOL_USESSL: "true"
       CMD_URL_ADDPORT: "false"
       CMD_EMAIL: "true"
