--- a/hedgedoc/docker-compose.yml
+++ b/hedgedoc/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: hedgedoc
     environment:
       CMD_DOMAIN: "hedgedoc.ozeliurs.com"
-      CMD_ALLOW_ORIGIN: "hedgedoc.ozeliurs.com"
+      CMD_CSP_ENABLE: "false"
       CMD_PROTOCOL_USESSL: "true"
       CMD_URL_ADDPORT: "false"
       CMD_EMAIL: "true"
