fix(docker-compose.yml): update hedgedoc image to version 1.10.0 and remove unnecessary CSP_ENABLE environment variable The update to a specific version of the hedgedoc image ensures consistency and reproducibility in the deployment. The removal of the CSP_ENABLE environment variable simplifies the configuration and eliminates unnecessary settings.

--- a/hedgedoc/docker-compose.yml
+++ b/hedgedoc/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   hedgedoc:
-    image: quay.io/hedgedoc/hedgedoc:latest
+    image: quay.io/hedgedoc/hedgedoc:1.10.0
     restart: unless-stopped
     container_name: hedgedoc
     environment:
       CMD_DOMAIN: "hedgedoc.ozeliurs.com"
-      CMD_CSP_ENABLE: "false"
       CMD_PROTOCOL_USESSL: "true"
       CMD_URL_ADDPORT: "false"
       CMD_EMAIL: "true"
